test/types/atomic/vass/read-atomics-1.good
read-atomics-1.chpl:3: error: direct access to an atomic variable, 'a', is prohibited, use read() instead
