test/types/atomic/vass/read-atomics-1.chpl

var a: atomic int;
var b: int = a;
